[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qute"
version = "0.1.0"
description = "A customizable design system for PySide6 UIs"
authors = [{ name = "Dorian CARDOSO" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["qute*"]

[tool.setuptools.package-data]
"qute" = ["themes/*.qss"]
