[metadata]
name = qute
version = 0.1.0
description = A customizable design system for PySide6 UIs
author = Dorian CARDOSO
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8

[options.package_data]
qute =
    themes/*.qss
